force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Продукты</fullName>
            </value>
            <value>
                <fullName>Непродуктовые</fullName>
            </value>
            <value>
                <fullName>Коммунальные</fullName>
            </value>
            <value>
                <fullName>Связь</fullName>
            </value>
            <value>
                <fullName>Одежда</fullName>
            </value>
            <value>
                <fullName>Здоровье</fullName>
            </value>
            <value>
                <fullName>Развлечения</fullName>
            </value>
            <value>
                <fullName>Образование</fullName>
            </value>
            <value>
                <fullName>Авто</fullName>
            </value>
            <value>
                <fullName>Транспорт</fullName>
            </value>
            <value>
                <fullName>Обмен валюты</fullName>
            </value>
            <value>
                <fullName>Другие</fullName>
            </value>
            <value>
                <fullName>Коррекция-</fullName>
            </value>
            <value>
                <fullName>Проекты</fullName>
            </value>
            <value>
                <fullName>Услуги</fullName>
            </value>
            <value>
                <fullName>Ревизия</fullName>
            </value>
            <value>
                <fullName>Недвижимость</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>