force-app/main/default/objects/Expense__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>