force-app/main/default/objects/Expense__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>SubCategory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>